--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <div class="main-menu-middel">
                                 <nav id="primary-menu" class="d-none d-lg-block">
                                     <ul class="main-menu text-right">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Anasayfa</a>
                                             <ul>
                                                 <li><a href="index.html">home version 1</a></li>
                                                 <li><a href="index-2.html">home version 2</a></li>
