--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         
         <!-- All css files are included here --> 
         <!-- Bootstrap css -->        
-        <link rel="stylesheet" href="css/bootstrap.min.css"> 
+        <link rel="stylesheet" href="css/bootstrap.min.css?v=1.1"> 
         <!-- All icon css in icons.css -->
-        <link rel="stylesheet" href="css/icons.css">
+        <link rel="stylesheet" href="css/icons.css?v=1.1">
         <!-- All CSS plugins included in this file -->
-        <link rel="stylesheet" href="css/plugins.css">
+        <link rel="stylesheet" href="css/plugins.css?v=1.1">
         <!-- Theme shortcodes/elements style -->  
-        <link rel="stylesheet" href="css/shortcode/shortcodes.css">
+        <link rel="stylesheet" href="css/shortcode/shortcodes.css?v=1.1">
         <!--  Theme main style-->  
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css?v=1.1">
         <!-- Responsive CSS-->
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="css/responsive.css?v=1.1">
         <!-- Modernizr JS -->
         <script src="js/vendor/modernizr-3.11.7.min.js"></script>
     </head>  
@@ -42,7 +42,7 @@
                         <div class="col-lg-4 col-md-12 col-12">
                             <div class="logo">
                                 <a class="logo-normal" href="index.html"><img src="images/logo/logo2.png" alt=""></a>
-                                <a class="logo-sticky" href="index.html"><img src="images/logo/logo.png" alt=""></a>
+                                <a class="logo-sticky" href="index.html"><img src="images/logo/logo2.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-12 col-12"> 
@@ -153,7 +153,7 @@
             <!-- Start Slider Area -->
             <div class="slider-area bg-1 height-100vh">
                 <div class="slide-title">
-                    <h1>Hi, I'M Jack Johnson</h1>
+                    <h1>Merahba ben Serkan ATEŞ</h1>
                     <h2 class="title1 cd-headline clip is-full-width text-uppercase text-white mb-16">
                         a professional 
                     <span class="cd-words-wrapper">
