--- a/index.html
+++ b/index.html
@@ -155,11 +155,10 @@
                 <div class="slide-title">
                     <h1>Merahba ben Serkan ATEŞ</h1>
                     <h2 class="title1 cd-headline clip is-full-width text-uppercase text-white mb-16">
-                        a professional 
+                        Profesyonel 
                     <span class="cd-words-wrapper">
-                        <b class="is-visible"> Developer .</b>
-                        <b>Designer .</b>
-                        <b>Frelancer .</b>
+                        <b class="is-visible"> Mimar .</b>
+                        <b> Tasarımcı.</b>
                     </span>
                     </h2>
                 </div> 
@@ -427,7 +426,7 @@
                                     <h3 class="text-white mb-26">Twitter Feed</h3>
                                     <ul class="twitter-feed">
                                         <li><i class="fa fa-twitter"></i>
-                                            <div class="feed-text">become an  <a href="#">@example </a>- A modern theme for eCommerce : <a href="#">https://example.com/donal </a><span>2 Month Ago</span></div>
+                                            >
                                         </li>
                                     </ul>
                                 </div>
