--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
                 <div class="container">
                     <!--  Map Section -->
                     <div id="contacts" class="map-area">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2224905.8379164026!2d-63.27089988050263!3d-2.8569688249815943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91e8605342744385%3A0x3d3c6dc1394a7fc7!2sAmazon%20Rainforest!5e0!3m2!1sen!2sbd!4v1635401091721!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps?q=41.0908984,29.0098578&z=12&output=embed" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div> 
             </div>
@@ -212,7 +212,7 @@
                 <div class="copyright-area text-center ptb-25">
                     <div class="container">
                         <div class="footer-text">
-                            <span>Copyright &copy;<a href="#"> Donal</a>. All right reserved.</span>
+            
                         </div>
                     </div>
                 </div>
