--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="breadcrumb-text">
-                                <h2 class="text-center">contact us</h2>
-                                <ul>
-                                    <li>
-                                        <a class="active" href="#">Home</a>
-                                    </li>
-                                    <li>contact us</li>
-                                </ul>
+                                <h2 class="text-center">İletişim</h2>
+                            
                             </div>
                         </div>
                     </div>
@@ -99,7 +94,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-6">
                             <div class="contact-form">
-                                <h4>Contact Info</h4>
+                                <h4>İletişim Bilgileri</h4>
                                 <div class="contact-info">
                                     <div class="single-contact-info">
                                         <div class="single-contact-icon">
@@ -133,7 +128,7 @@
                         <div class="col-lg-7 col-md-6">
                              <div class="contact-right">
                                 <div class="contact-form fix">
-                                    <h4>Get In Touch</h4>
+                                    <h4>İletişime Geç</h4>
                                     <form id="contact-form" action="https://htmldemo.net/donal/mail.php" method="post" class="">
                                         <div class="col">
                                             <input type="text" name="name" id="name" class="pl-20" placeholder="İsim">
@@ -145,10 +140,10 @@
                                             <input type="text" name="text" id="sub" class="pl-20" placeholder="Konu">
                                         </div>
                                         <div class="col">
-                                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" class="mb-10"></textarea>
+                                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Mesaj" class="mb-10"></textarea>
                                         </div>
                                         <div class="col fix">
-                                            <button type="submit" class="button submit-btn">SUBMIT</button>
+                                            <button type="submit" class="button submit-btn">Gönder</button>
                                         </div>
                                         <p class="form-messege"></p>
                                     </form>
