--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         <li><a href="index.html">Anasayfa</a>
 
                                         </li>
-                                        <li><a href="portfolio-details-2.html">Portfolio</a>
+                                        <li><a href="portfolio-details-2.html">Portfolyo</a>
                             
                                         <li><a href="about.html">Hakkımızda</a></li>
                                     
