--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -77,6 +77,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="breadcrumb-text">
+                                <div class="breadcrumb-text">
+                                    <h2 class="text-center">Portfolyo</h2>
+                                    <ul>
                             </div>
                         </div>
                     </div>
